2008-04-01  Michael Hutchinson <mhutchinson@novell.com> 

	* Schemas, Schemas/xhtml1-transitional.xsd, Schemas/W3C-License.html,
	  Schemas/xhtml1-strict.xsd, Schemas/readme.txt,
	  Schemas/xhtml1-frameset.xsd: Add W3C XHTML 1.0 schemas.
	* MonoDevelop.Html/DocTypeCompletionData.cs,
	  MonoDevelop.Html/DocTypeCompletionDataProvider.cs: Implement
	  completion provider for doctype declarations.
	* MonoDevelop.Html/HtmlSchema.cs: Change to an association between an
	  doctype and an IXmlCompletionProvider from the XmlEditor.
	* MonoDevelop.Html/HtmlSchemaService.cs: Load doctypes and associated
	  schemas from extension point. Expose default doctypes, and
	  mechanisms for getting completion providers for any registered
	  doctype, as well as a completion provider for doctypes themselves.
	* MonoDevelop.Html/DocTypeExtensionNode.cs,
	  MonoDevelop.AspNet.addin.xml: Added HTML(/SGML/XML) doctypes as an
	  extension point.
	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Implement HTML code
	  completion for aspx files.
	* Makefile.am, AspNetAddIn.mdp: Updated.

2008-03-10  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.Deployment/WebDeployLaunchDialog.cs: Fix namespace
	  of panel.

2008-03-06  Michael Hutchinson  <mhutchinson@novell.com> 

	* Templates/WebConfig-SubDir.xft.xml:
	* Templates/WebConfig-Application.xft.xml: Improve descriptions.

2008-03-04  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet/AspNetAppProject.cs: Improve browser launching code.
	* MonoDevelop.AspNet.Gui/BrowserLauncher.cs: Move browser launcher code and
	  make it into a re-usable IAsyncOperation.
	* AspNetAddIn.mdp, Makefile.am: Updated.
	* MonoDevelop.AspNet.Parser/Regexes.cs: Improve server tag regex.

2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.AspNet.Deployment/WebDeployService.cs,
	  MonoDevelop.AspNet/XspParameters.cs,
	  MonoDevelop.AspNet/AspNetAppProject.cs: Worked on gnome hig compliant
	  alerts.
